feat(charlie): renew artifacts and project automated findings
